...
    self.savePresetButton.autoresizingMask = UIViewAutoresizingFlexibleTopMargin | UIViewAutoresizingFlexibleBottomMargin;
	[self.controlsContainer addSubview:self.savePresetButton];
	
    self.isDeletePresetButtonShowing = NO;
	self.deletePresetButton = [UIButton buttonWithType:UIButtonTypeRoundedRect];
	self.deletePresetButton.frame = CGRectMake(f.origin.x + f.size.width - 65., f.origin.y, 60., 30.);
	[self.deletePresetButton setTitle:@"Delete" forState:UIControlStateNormal];
	[self.deletePresetButton addTarget:self action:@selector(promptToDeleteCustomPreset) forControlEvents:UIControlEventTouchUpInside];
	self.deletePresetButton.alpha = 0.;
	self.deletePresetButton.enabled = NO;
    self.deletePresetButton.autoresizingMask = UIViewAutoresizingFlexibleTopMargin | UIViewAutoresizingFlexibleBottomMargin;
	[self.controlsContainer addSubview:self.deletePresetButton];
    
...
}

- (void)viewDidAppear:(BOOL)animated {
    [super viewDidAppear: animated];
	if (settingsS.isShouldShowEQViewInstructions) {
        NSString *message = @"Double tap to create a new EQ point and double tap any existing EQ points to remove them.";
        UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Instructions" message:message preferredStyle:UIAlertControllerStyleAlert];
        [alert addAction:[UIAlertAction actionWithTitle:@"Don't Show Again" style:UIAlertActionStyleDestructive handler:^(UIAlertAction * _Nonnull action) {
            settingsS.isShouldShowEQViewInstructions = NO;
        }]];
        [alert addAction:[UIAlertAction actionWithTitle:@"Cancel" style:UIAlertActionStyleCancel handler:nil]];
        [self presentViewController:alert animated:YES completion:nil];
	}
}

- (void)createAndDrawEqualizerPath {
	// Sort the points
...
		count--;
    }
	
	if (count > 0) {
		self.saveDialog = [[DDSocialDialog alloc] initWithFrame:CGRectMake(0., 0., 300., 300.) theme:DDSocialDialogThemeISub];
		self.saveDialog.dialogDelegate = self;
		self.saveDialog.titleLabel.text = @"Choose Preset To Save";
		UITableView *saveTable = [[UITableView alloc] initWithFrame:self.saveDialog.contentView.frame style:UITableViewStylePlain];
		saveTable.autoresizingMask = UIViewAutoresizingFlexibleWidth | UIViewAutoresizingFlexibleHeight;
		saveTable.dataSource = self;
		saveTable.delegate = self;
		[self.saveDialog.contentView addSubview:saveTable];
		[self.saveDialog show];
	} else {
		[self promptForSavePresetName];
	}
}

- (void)promptForSavePresetName {
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Create Preset" message:nil preferredStyle:UIAlertControllerStyleAlert];
    [alert addTextFieldWithConfigurationHandler:^(UITextField * _Nonnull textField) {
        textField.placeholder = @"Preset name";
    }];
    [alert addAction:[UIAlertAction actionWithTitle:@"Save" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {
        NSString *name = [alert.textFields.firstObject text];
        [self.effectDAO saveCustomPreset:self.serializedEqPoints name:name];
...
