...
	
    if (appDelegateS.referringAppUrl) {
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"back-tabbaricon.png" text:@"Back"]];
    }
    
	if (settingsS.isOfflineMode) {
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"settings-tabbaricon.png"    text:@"Settings"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"folders-tabbaricon.png"     text:@"Folders"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"genres-tabbaricon.png"      text:@"Genres"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"playlists-tabbaricon.png"   text:@"Playlists"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"bookmarks-tabbaricon.png"   text:@"Bookmarks"]];
	} else {
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"settings-tabbaricon.png"    text:@"Settings"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"home-tabbaricon.png"        text:@"Home"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"folders-tabbaricon.png"     text:@"Folders"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"playlists-tabbaricon.png"   text:@"Playlists"]];
        [_cellContents addObject:[MenuTableItem itemWithImageName:@"playing-tabbaricon.png"     text:@"Playing"]];
...
