...

- (void)connection:(NSURLConnection *)theConnection didFailWithError:(NSError *)error
{
	[jukeboxS.connectionQueue connectionFinished:theConnection];
	
    NSString *message = [NSString stringWithFormat:@"There was an error controlling the Jukebox.\n\nError %li: %@", (long)[error code], [error localizedDescription]];
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Error"
                                                                   message:message
                                                            preferredStyle:UIAlertControllerStyleAlert];
    [alert addAction:[UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleCancel handler:nil]];
    [UIApplication.keyWindow.rootViewController presentViewController:alert animated:YES completion:nil];
    
	self.receivedData = nil;
...
